--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>meçi umildi</title>
     <link rel="stylesheet" href="styles.css"> 
 </head>
+
 <body>
+<div></div>
     
+
+
+
+
 </body>
 </html>
